# mcp-directory

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  docker-compose.yml  env.example  pyproject.toml  railway.env.example  railway.json
.cursor/rules/: 01-mcp-development.mdc
.github/workflows/: ci.yml  mindsdb.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
docs/ai/: README.md
libs/mcp_common/: __init__.py  auth.py  config.py  exceptions.py  logging.py  models.py  pyproject.toml  rate_limiting.py  tools.py  validation.py
scripts/: check_server_structure.py  check_todos.py  validate_docker_configs.py
servers/mindsdb/: .pre-commit-config.yaml  Dockerfile  Dockerfile.railway  Makefile  RAILWAY_DEPLOYMENT.md  README.md  docker-compose.yml  env.example  pyproject.toml  railway.json  railway.toml
servers/mindsdb/src/mindsdb_mcp_server/: __init__.py  client.py  config.py  main.py  tools.py  web_server.py
servers/mindsdb/tests/: __init__.py  test_client.py  test_tools.py
servers/notion/: Dockerfile  main.py  pyproject.toml
servers/template/: Dockerfile  README.md  main.py  pyproject.toml
servers/template/tests/: __init__.py  conftest.py
servers/template/tests/unit/: test_tools.py
tests/integration/: test_mindsdb_integration.py
